// Copyright 2018-2021 Cargill Incorporated
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message TwoPhaseMessage {
    enum Type {
        UNSET_TYPE = 0;
        PROPOSAL_VERIFICATION_REQUEST = 1;
        PROPOSAL_VERIFICATION_RESPONSE = 2;
        PROPOSAL_RESULT = 3;
    }

    enum ProposalVerificationResponse {
        UNSET_VERIFICATION_RESPONSE = 0;
        VERIFIED = 1;
        FAILED = 2;
    }

    enum ProposalResult {
        UNSET_RESULT = 0;
        APPLY = 1;
        REJECT = 2;
    }

    Type message_type = 1;

    bytes proposal_id = 2;

    ProposalVerificationResponse proposal_verification_response = 3;
    ProposalResult proposal_result = 4;
}

// Message to be set in consensus data to tell the consensus engine who needs to
// approve the proposal
message RequiredVerifiers {
  repeated bytes verifiers = 1;
}
